--- a/configs/iris.yaml
+++ b/configs/iris.yaml
@@ -39,9 +39,9 @@ counterfactual:
 
 experiment_params:
   seed: 42
-  sample_indices: null  # null = random, or list like [0, 5, 10]
-  num_samples: 1 # number of samples to process if sample_indices is null
-  num_combinations_to_test: 1  # null = test half of all combinations
+  sample_indices: [2]  # null = random, or list like [0, 5, 10]
+  num_samples: 1 
+  num_combinations_to_test: 1 
   num_replications: 5
 
 output:
