--- a/configs/iris.yaml
+++ b/configs/iris.yaml
@@ -35,6 +35,7 @@ counterfactual:
   original_escape_weight: 2.0  # Weight for penalizing staying within original class bounds
   escape_pressure: 0.5  # Balance between escaping original (1.0) vs approaching target (0.0)
   prioritize_non_overlapping: true  # Prioritize mutating features with non-overlapping boundaries
+  max_bonus_cap: 50.0  # Cap for diversity/repulsion bonuses to prevent unbounded negative fitness
   
   # Runtime parameters
   population_size: 50
