--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -58,6 +58,22 @@ methods:
   dpg:
     method: dpg
     diversity_weight: 0.5
+    # DPG configuration parameters (optional, defaults provided in DPG/config.yaml)
+    config:
+      perc_var: 0.0000001
+      decimal_threshold: 3
+      n_jobs: -1
+      visualization:
+        graph_attrs:
+          bgcolor: "white"
+          rankdir: "R"
+        node_attrs:
+          shape: "box"
+          fillcolor: "#ffc3c3"
+        class_node:
+          fillcolor: "#a4c2f4"
+          shape: "box"
+          style: "rounded, filled"
   dice:
     method: dice
     total_CFs: 4
