--- a/configs/abalone_19/config.yaml
+++ b/configs/abalone_19/config.yaml
@@ -1,11 +1,3 @@
-# Configuration for abalone_19 dataset
-# Only dataset-specific overrides are included here.
-# Base defaults are loaded from configs/config.yaml
-#
-# Usage:
-#   python scripts/run_experiment.py --dataset abalone_19 --method dpg
-#   python scripts/run_experiment.py --dataset abalone_19 --method dice
-
 data:
   dataset: abalone_19
   dataset_path: configs/abalone_19/dataset.csv
@@ -14,3 +6,11 @@ experiment:
   tags:
   - abalone_19
   name: abalone_19
+model:
+  type: RandomForestClassifier
+  n_estimators: 2
+  min_samples_split: 15
+  min_impurity_decrease: 0.0
+  max_features: 0.5
+  max_depth: null
+  criterion: gini
