--- a/configs/arrhythmia/config.yaml
+++ b/configs/arrhythmia/config.yaml
@@ -1,11 +1,3 @@
-# Configuration for arrhythmia dataset
-# Only dataset-specific overrides are included here.
-# Base defaults are loaded from configs/config.yaml
-#
-# Usage:
-#   python scripts/run_experiment.py --dataset arrhythmia --method dpg
-#   python scripts/run_experiment.py --dataset arrhythmia --method dice
-
 data:
   dataset: arrhythmia
   dataset_path: configs/arrhythmia/dataset.csv
@@ -14,3 +6,11 @@ experiment:
   tags:
   - arrhythmia
   name: arrhythmia
+model:
+  type: RandomForestClassifier
+  n_estimators: 10
+  min_samples_split: 12
+  min_impurity_decrease: 0.02
+  max_features: 0.5
+  max_depth: null
+  criterion: entropy
