--- a/configs/banknote_authentication/config.yaml
+++ b/configs/banknote_authentication/config.yaml
@@ -1,11 +1,3 @@
-# Configuration for banknote_authentication dataset
-# Only dataset-specific overrides are included here.
-# Base defaults are loaded from configs/config.yaml
-#
-# Usage:
-#   python scripts/run_experiment.py --dataset banknote_authentication --method dpg
-#   python scripts/run_experiment.py --dataset banknote_authentication --method dice
-
 data:
   dataset: banknote_authentication
   dataset_path: configs/banknote_authentication/dataset.csv
@@ -14,3 +6,11 @@ experiment:
   tags:
   - banknote_authentication
   name: banknote_authentication
+model:
+  type: RandomForestClassifier
+  n_estimators: 25
+  min_samples_split: 2
+  min_impurity_decrease: 0.0
+  max_features: null
+  max_depth: null
+  criterion: entropy
