--- a/configs/car_eval_34/config.yaml
+++ b/configs/car_eval_34/config.yaml
@@ -1,11 +1,3 @@
-# Configuration for car_eval_34 dataset
-# Only dataset-specific overrides are included here.
-# Base defaults are loaded from configs/config.yaml
-#
-# Usage:
-#   python scripts/run_experiment.py --dataset car_eval_34 --method dpg
-#   python scripts/run_experiment.py --dataset car_eval_34 --method dice
-
 data:
   dataset: car_eval_34
   dataset_path: configs/car_eval_34/dataset.csv
@@ -14,3 +6,11 @@ experiment:
   tags:
   - car_eval_34
   name: car_eval_34
+model:
+  type: RandomForestClassifier
+  n_estimators: 10
+  min_samples_split: 10
+  min_impurity_decrease: 0.0
+  max_features: 0.7
+  max_depth: null
+  criterion: entropy
