--- a/configs/diabetes/config.yaml
+++ b/configs/diabetes/config.yaml
@@ -1,11 +1,3 @@
-# Configuration for diabetes dataset
-# Only dataset-specific overrides are included here.
-# Base defaults are loaded from configs/config.yaml
-#
-# Usage:
-#   python scripts/run_experiment.py --dataset diabetes --method dpg
-#   python scripts/run_experiment.py --dataset diabetes --method dice
-
 data:
   dataset: diabetes
   dataset_path: configs/diabetes/dataset.csv
@@ -14,3 +6,11 @@ experiment:
   tags:
   - diabetes
   name: diabetes
+model:
+  type: RandomForestClassifier
+  n_estimators: 12
+  min_samples_split: 12
+  min_impurity_decrease: 0.0
+  max_features: 0.3
+  max_depth: 8
+  criterion: entropy
