--- a/configs/ecoli/config.yaml
+++ b/configs/ecoli/config.yaml
@@ -1,11 +1,3 @@
-# Configuration for ecoli dataset
-# Only dataset-specific overrides are included here.
-# Base defaults are loaded from configs/config.yaml
-#
-# Usage:
-#   python scripts/run_experiment.py --dataset ecoli --method dpg
-#   python scripts/run_experiment.py --dataset ecoli --method dice
-
 data:
   dataset: ecoli
   dataset_path: configs/ecoli/dataset.csv
@@ -14,3 +6,11 @@ experiment:
   tags:
   - ecoli
   name: ecoli
+model:
+  type: RandomForestClassifier
+  n_estimators: 10
+  min_samples_split: 12
+  min_impurity_decrease: 0.0
+  max_features: 0.7
+  max_depth: null
+  criterion: gini
