--- a/configs/education_dataset/config.yaml
+++ b/configs/education_dataset/config.yaml
@@ -1,11 +1,3 @@
-# Configuration for education_dataset dataset
-# Only dataset-specific overrides are included here.
-# Base defaults are loaded from configs/config.yaml
-#
-# Usage:
-#   python scripts/run_experiment.py --dataset education_dataset --method dpg
-#   python scripts/run_experiment.py --dataset education_dataset --method dice
-
 data:
   dataset: education_dataset
   dataset_path: configs/education_dataset/dataset.csv
@@ -14,3 +6,11 @@ experiment:
   tags:
   - education_dataset
   name: education_dataset
+model:
+  type: RandomForestClassifier
+  n_estimators: 10
+  min_samples_split: 4
+  min_impurity_decrease: 0.02
+  max_features: 0.3
+  max_depth: 8
+  criterion: entropy
