--- a/configs/energy_dataset/config.yaml
+++ b/configs/energy_dataset/config.yaml
@@ -1,11 +1,3 @@
-# Configuration for energy_dataset dataset
-# Only dataset-specific overrides are included here.
-# Base defaults are loaded from configs/config.yaml
-#
-# Usage:
-#   python scripts/run_experiment.py --dataset energy_dataset --method dpg
-#   python scripts/run_experiment.py --dataset energy_dataset --method dice
-
 data:
   dataset: energy_dataset
   dataset_path: configs/energy_dataset/dataset.csv
@@ -14,3 +6,11 @@ experiment:
   tags:
   - energy_dataset
   name: energy_dataset
+model:
+  type: RandomForestClassifier
+  n_estimators: 7
+  min_samples_split: 10
+  min_impurity_decrease: 0.01
+  max_features: null
+  max_depth: 5
+  criterion: entropy
