--- a/configs/german_credit/config.yaml
+++ b/configs/german_credit/config.yaml
@@ -1,11 +1,3 @@
-# Configuration for german_credit dataset
-# Only dataset-specific overrides are included here.
-# Base defaults are loaded from configs/config.yaml
-#
-# Usage:
-#   python scripts/run_experiment.py --dataset german_credit --method dpg
-#   python scripts/run_experiment.py --dataset german_credit --method dice
-
 data:
   dataset: german_credit
   dataset_path: configs/german_credit/dataset.csv
@@ -27,3 +19,11 @@ experiment:
   tags:
   - german_credit
   name: german_credit
+model:
+  type: RandomForestClassifier
+  n_estimators: 15
+  min_samples_split: 4
+  min_impurity_decrease: 0.0
+  max_features: 0.3
+  max_depth: null
+  criterion: entropy
