--- a/configs/heart_disease_uci/config.yaml
+++ b/configs/heart_disease_uci/config.yaml
@@ -1,11 +1,3 @@
-# Configuration for heart_disease_uci dataset
-# Only dataset-specific overrides are included here.
-# Base defaults are loaded from configs/config.yaml
-#
-# Usage:
-#   python scripts/run_experiment.py --dataset heart_disease_uci --method dpg
-#   python scripts/run_experiment.py --dataset heart_disease_uci --method dice
-
 data:
   dataset: heart_disease_uci
   dataset_path: configs/heart_disease_uci/dataset.csv
@@ -21,3 +13,11 @@ experiment:
   tags:
   - heart_disease_uci
   name: heart_disease_uci
+model:
+  type: RandomForestClassifier
+  n_estimators: 25
+  min_samples_split: 10
+  min_impurity_decrease: 0.01
+  max_features: 0.3
+  max_depth: 5
+  criterion: entropy
