Add actionability methods for datasets

--- a/configs/diabetes/config.yaml
+++ b/configs/diabetes/config.yaml
@@ -6,6 +6,15 @@ experiment:
   tags:
   - diabetes
   name: diabetes
+methods:
+  _default:
+    actionability:
+      Age: non_decreasing
+      Pregnancies: non_decreasing
+      DiabetesPedigreeFunction: no_change
+      BMI: actionable
+      Glucose: actionable
+      BloodPressure: actionable
 model:
   type: RandomForestClassifier
   n_estimators: 12
