--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -23,8 +23,8 @@ data:
 # Model defaults
 model:
   type: RandomForestClassifier
-  n_estimators: 100
-  max_depth: null
+  n_estimators: 20
+  max_depth: 20
   random_state: 42
 
 # Experiment defaults
