Running new dataset tuning

--- a/configs/banknote_authentication/config.yaml
+++ b/configs/banknote_authentication/config.yaml
@@ -8,9 +8,9 @@ experiment:
   name: banknote_authentication
 model:
   type: RandomForestClassifier
-  n_estimators: 25
+  n_estimators: 12
   min_samples_split: 2
   min_impurity_decrease: 0.0
   max_features: null
-  max_depth: null
+  max_depth: 7
   criterion: entropy
