--- a/configs/letter_img/config.yaml
+++ b/configs/letter_img/config.yaml
@@ -8,9 +8,9 @@ experiment:
   name: letter_img
 model:
   type: RandomForestClassifier
-  n_estimators: 12
+  n_estimators: 20
   min_samples_split: 4
   min_impurity_decrease: 0.0
   max_features: 0.7
-  max_depth: null
+  max_depth: 10
   criterion: entropy
