--- a/configs/pen_digits/config.yaml
+++ b/configs/pen_digits/config.yaml
@@ -8,9 +8,9 @@ experiment:
   name: pen_digits
 model:
   type: RandomForestClassifier
-  n_estimators: 15
+  n_estimators: 20
   min_samples_split: 4
   min_impurity_decrease: 0.0
   max_features: 0.3
-  max_depth: null
+  max_depth: 10
   criterion: gini
