--- a/configs/abalone_19/config.yaml
+++ b/configs/abalone_19/config.yaml
@@ -8,9 +8,9 @@ experiment:
   name: abalone_19
 model:
   type: RandomForestClassifier
-  n_estimators: 2
+  n_estimators: 3
   min_samples_split: 15
   min_impurity_decrease: 0.0
   max_features: 0.5
-  max_depth: null
+  max_depth: 3
   criterion: gini
