--- a/configs/arrhythmia/config.yaml
+++ b/configs/arrhythmia/config.yaml
@@ -8,9 +8,9 @@ experiment:
   name: arrhythmia
 model:
   type: RandomForestClassifier
-  n_estimators: 10
+  n_estimators: 4
   min_samples_split: 12
   min_impurity_decrease: 0.02
   max_features: 0.5
-  max_depth: null
+  max_depth: 4
   criterion: entropy
