--- a/configs/ecoli/config.yaml
+++ b/configs/ecoli/config.yaml
@@ -12,5 +12,5 @@ model:
   min_samples_split: 12
   min_impurity_decrease: 0.0
   max_features: 0.7
-  max_depth: null
+  max_depth: 5
   criterion: gini
