--- a/configs/fraud_detection_dataset/config.yaml
+++ b/configs/fraud_detection_dataset/config.yaml
@@ -11,9 +11,9 @@ experiment:
   name: fraud_detection_dataset
 model:
   type: RandomForestClassifier
-  n_estimators: 2
+  n_estimators: 15
   min_samples_split: 15
   min_impurity_decrease: 0.02
   max_features: 0.7
-  max_depth: null
+  max_depth: 3
   criterion: entropy
