--- a/configs/german_credit/config.yaml
+++ b/configs/german_credit/config.yaml
@@ -21,9 +21,9 @@ experiment:
   name: german_credit
 model:
   type: RandomForestClassifier
-  n_estimators: 15
+  n_estimators: 5
   min_samples_split: 4
   min_impurity_decrease: 0.0
   max_features: 0.3
-  max_depth: null
+  max_depth: 5
   criterion: entropy
