--- a/configs/thyroid_sick/config.yaml
+++ b/configs/thyroid_sick/config.yaml
@@ -8,9 +8,9 @@ experiment:
   name: thyroid_sick
 model:
   type: RandomForestClassifier
-  n_estimators: 7
+  n_estimators: 20
   min_samples_split: 5
   min_impurity_decrease: 0.0
   max_features: 0.7
-  max_depth: null
+  max_depth: 10
   criterion: gini
