--- a/configs/wine_quality/config.yaml
+++ b/configs/wine_quality/config.yaml
@@ -8,9 +8,9 @@ experiment:
   name: wine_quality
 model:
   type: RandomForestClassifier
-  n_estimators: 15
+  n_estimators: 20
   min_samples_split: 4
   min_impurity_decrease: 0.0
   max_features: 0.5
-  max_depth: null
+  max_depth: 4
   criterion: gini
