--- a/configs/isolet/config.yaml
+++ b/configs/isolet/config.yaml
@@ -8,5 +8,7 @@ experiment:
   name: isolet
 model:
   type: RandomForestClassifier
-  n_estimators: 20
+  n_estimators: 7
   max_depth: 10
+  min_impurity_decrease: 0.0
+  max_features: 0.3
