--- a/configs/breast_cancer_wisconsin/config.yaml
+++ b/configs/breast_cancer_wisconsin/config.yaml
@@ -8,9 +8,9 @@ experiment:
   name: breast_cancer_wisconsin
 model:
   type: RandomForestClassifier
-  n_estimators: 15
+  n_estimators: 10
   min_samples_split: 10
-  min_impurity_decrease: 0.01
-  max_features: 0.3
-  max_depth: 10
+  min_impurity_decrease: 0.0
+  max_features: null
+  max_depth: 4
   criterion: entropy
