--- a/configs/car_eval_4/config.yaml
+++ b/configs/car_eval_4/config.yaml
@@ -11,6 +11,6 @@ model:
   n_estimators: 20
   min_samples_split: 2
   min_impurity_decrease: 0.0
-  max_features: null
+  max_features: 0.3
   max_depth: 10
   criterion: entropy
