--- a/configs/diabetes/config.yaml
+++ b/configs/diabetes/config.yaml
@@ -17,9 +17,9 @@ methods:
       BloodPressure: actionable
 model:
   type: RandomForestClassifier
-  n_estimators: 10
+  n_estimators: 12
   min_samples_split: 12
-  min_impurity_decrease: 0.0
-  max_features: 0.3
-  max_depth: 4
+  min_impurity_decrease: 0.01
+  max_features: null
+  max_depth: 5
   criterion: entropy
