--- a/configs/energy_dataset/config.yaml
+++ b/configs/energy_dataset/config.yaml
@@ -10,7 +10,7 @@ model:
   type: RandomForestClassifier
   n_estimators: 20
   min_samples_split: 10
-  min_impurity_decrease: 0.01
-  max_features: null
-  max_depth: 3
+  min_impurity_decrease: 0.05
+  max_features: 0.3
+  max_depth: 7
   criterion: entropy
