--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -34,7 +34,7 @@ experiment:
 experiment_params:
   seed: 42
   num_samples: 1
-  num_replications: 5
+  num_best_results: 5  # Number of best counterfactuals to retrieve from single run
   num_combinations_to_test: 1
   parallel_replications: true
   compute_comprehensive_metrics: true
