--- a/configs/oil/config.yaml
+++ b/configs/oil/config.yaml
@@ -15,8 +15,6 @@ output:
 model:
   type: RandomForestClassifier
   n_estimators: 10
-  min_samples_split: 3
   min_impurity_decrease: 0.0
-  max_features: null
-  max_depth: 6
-  criterion: entropy
+  max_features: 0.3
+  max_depth: 7
