Add dataset links to configs

--- a/configs/healthcare_dataset_stroke/config.yaml
+++ b/configs/healthcare_dataset_stroke/config.yaml
@@ -1,3 +1,4 @@
+# Kaggle dataset: https://www.kaggle.com/fedesoriano/stroke-prediction-dataset
 data:
   dataset: healthcare_dataset_stroke
   dataset_path: configs/healthcare_dataset_stroke/healthcare-dataset-stroke-data.csv
