--- a/configs/bank_marketing/config.yaml
+++ b/configs/bank_marketing/config.yaml
@@ -1,3 +1,4 @@
+# Kaggle dataset: https://www.kaggle.com/henriqueyamahata/bank-marketing
 data:
   dataset: bank_marketing
   dataset_path: configs/bank_marketing/bank-additional-full.csv
