--- a/configs/customer_personality_analysis/config.yaml
+++ b/configs/customer_personality_analysis/config.yaml
@@ -1,3 +1,4 @@
+# Kaggle dataset: https://www.kaggle.com/imakash3011/customer-personality-analysis
 data:
   dataset: customer_personality_analysis
   dataset_path: configs/customer_personality_analysis/marketing_campaign.csv
