--- a/configs/telco_customer_churn/config.yaml
+++ b/configs/telco_customer_churn/config.yaml
@@ -1,3 +1,4 @@
+# Kaggle dataset: https://www.kaggle.com/blastchar/telco-customer-churn
 data:
   dataset: telco_customer_churn
   dataset_path: configs/telco_customer_churn/WA_Fn-UseC_-Telco-Customer-Churn.csv
