Add customer personality analysis dataset

--- a/plans/dataset_run_ids.yaml
+++ b/plans/dataset_run_ids.yaml
@@ -41,3 +41,6 @@ datasets:
 obesity_levels:
     dice: 38ajzw5s
     dpg: 486q0lwp
+customer_personality_analysis:
+    dice: 8sbjngf4
+    dpg: jup8n3ip
