Adjust model parameters and dataset entries

--- a/plans/dataset_run_ids.yaml
+++ b/plans/dataset_run_ids.yaml
@@ -44,3 +44,6 @@ obesity_levels:
 customer_personality_analysis:
     dice: 8sbjngf4
     dpg: jup8n3ip
+healthcare_dataset_stroke:
+    dice: 3atwqpqb
+    dpg: 0vzcrs5b
