--- a/configs/bank_marketing/config.yaml
+++ b/configs/bank_marketing/config.yaml
@@ -1,9 +1,8 @@
-# Kaggle dataset: https://www.kaggle.com/henriqueyamahata/bank-marketing
 data:
   dataset: bank_marketing
   dataset_path: configs/bank_marketing/dataset.csv
   target_column: y
-  separator: ";"
+  separator: ;
   categorical_features:
   - job
   - marital
@@ -44,9 +43,7 @@ methods:
       nr.employed: actionable
 model:
   type: RandomForestClassifier
-  n_estimators: 15
-  min_samples_split: 10
-  min_impurity_decrease: 0.01
-  max_features: 0.4
-  max_depth: 6
-  criterion: entropy
+  n_estimators: 7
+  min_impurity_decrease: 0.0
+  max_features: null
+  max_depth: 5
