--- a/plans/dataset_run_ids.yaml
+++ b/plans/dataset_run_ids.yaml
@@ -47,12 +47,12 @@ datasets:
   healthcare_dataset_stroke:
       dice: 3atwqpqb
       dpg: 0vzcrs5b
-  telco_customer_churn:
-      dice: 1r3dtya0
-      dpg: wxko28pd
   bank_marketing:
       dice: vro54d27
       dpg: alpor15p
-  coil_2000:
-      dice: lyj97d2m
-      dpg: 8y41icz2
+  # telco_customer_churn:
+  #     dice: 1r3dtya0
+  #     dpg: wxko28pd
+  # coil_2000:
+  #     dice: lyj97d2m
+  #     dpg: 8y41icz2
