Fix diabetes dataset IDs

--- a/plans/dataset_run_ids.yaml
+++ b/plans/dataset_run_ids.yaml
@@ -3,8 +3,8 @@ datasets:
     dice: r9osrefn
     dpg: 3y8je31j
   diabetes:
-    dice: s9k8e9cn
-    dpg: 45v4wmkw
+    dice: v5v3ic72
+    dpg: r4gbkwvi
   ecoli:
     dice: z54voy0h
     dpg: 7qhvgip4
