Fix diabetes dataset dice ID

--- a/plans/dataset_run_ids.yaml
+++ b/plans/dataset_run_ids.yaml
@@ -3,7 +3,7 @@ datasets:
     dice: r9osrefn
     dpg: 3y8je31j
   diabetes:
-    dice: v5v3ic72
+    dice: of96tqcx
     dpg: r4gbkwvi
   ecoli:
     dice: z54voy0h
