Fix obesity_levels dataset IDs

--- a/plans/dataset_run_ids.yaml
+++ b/plans/dataset_run_ids.yaml
@@ -39,8 +39,8 @@ datasets:
     dice: aers3zg7
     dpg: xmr7fj8q
   obesity_levels:
-    dice: 38ajzw5s
-    dpg: 486q0lwp
+    dice: cjwy6jzp
+    dpg: vl0dh9te
   customer_personality_analysis:
     dice: 8sbjngf4
     dpg: jup8n3ip
