Fix obesity_levels DPG ID

--- a/plans/dataset_run_ids.yaml
+++ b/plans/dataset_run_ids.yaml
@@ -40,7 +40,7 @@ datasets:
     dpg: xmr7fj8q
   obesity_levels:
     dice: cjwy6jzp
-    dpg: vl0dh9te
+    dpg: wq3lgxua
   customer_personality_analysis:
     dice: 8sbjngf4
     dpg: jup8n3ip
