Fix diabetes dataset IDs

--- a/plans/dataset_run_ids.yaml
+++ b/plans/dataset_run_ids.yaml
@@ -3,8 +3,8 @@ datasets:
     dice: r9osrefn
     dpg: 3y8je31j
   diabetes:
-    dice: of96tqcx
-    dpg: r4gbkwvi
+    dice: j69ldjbu
+    dpg: 9aecmenw
   ecoli:
     dice: z54voy0h
     dpg: 7qhvgip4
